src/scss/_components.scss
/* ... */
/* Overlay on card */
.overlap-dialog {
  position: absolute;
  bottom: 3.5rem;
  left: 0;
  width: 100%;
  height: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  z-index: 2;
  transition-property: height, background-color, border-color !important;

  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: $gray-900;
    opacity: 0.8;
    z-index: -1;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
  }
  &.show {
    height: calc(100% - 3.5rem);
  }

  @include media-breakpoint-down(sm) {
    position: fixed;
    bottom: 0;
    z-index: 3;

    &:before {
      border-radius: 0;
    }
    &.show {
      height: 100%;
    }
    .card .card-body {
      padding-bottom: 2.5rem;
    }
  }
}
@include media-breakpoint-up(sm){
  .block:not(.active) .overlap-dialog {
    display: none !important;
  }
}

// Tracking Order
.tracking-order-animation-wrapper {
  display: none;

  .free-anim {
    width: 8rem;
    height: 8rem;
    margin: auto;
  }
  .premium-anim {
    width: 7rem;
    height: 7rem;
    margin: auto;
    display: none;
  }

  &.premium-active {

    .free-anim {
      display: none !important;
    }
    .premium-anim.light {
      display: block;
    }
  }
}

// Multiple Shipments
#multiple-shipments {
  display: none;
}

// Remember me
.remember-me {

  .close-btn {
    position: absolute;
    top: 1rem;
    right: 1rem;
  }
  .close-btn svg,
  .close-btn svg * {
    color: inherit;
    fill: currentColor;
  }

  @include media-breakpoint-down(sm){
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    max-height: none !important;
    background: rgba(0, 0, 0, 0.6);

    .card {
      position: absolute;
      top: 50%;
      left: 1rem;
      right: 1rem;
      width: auto;
      transform: translateY(-50%);
    }
  }
}

// Modals
.modal-backdrop.show {
  opacity: 0.8;
}
.modal {

  .modal-close-button {
    border: 0;
    position: absolute;
    top: 0;
    right: -3rem;
    margin-left: 5px;
    font-size: 0;
    width: 2.25rem;
    height: 2.25rem;
    background-color: transparent !important;
    background-image: url("../images/icons/popup-cancel-light.svg");
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    z-index: 1;
    pointer-events: auto;
    cursor: pointer;
    
    @include media-breakpoint-down(sm) {
      width: 1.75rem;
      height: 1.75rem;
      right: -2rem;
    }
  }
  .modal-inside {
    position: relative;
    width: 100%;
    margin: auto;

    @include media-breakpoint-down(sm) {
      width: 85%;
    }
  }
  .modal-content {
    font-family: $font-family-inter;
    font-size: 1rem;
    overflow: auto;
    background: $primary-050;
    box-shadow: none;
    border-radius: 16px;
    padding: 3rem;
    width: 100%;
    border: 0;
    max-height: 60vh;
    line-height: 1.4;
  }
  .modal-header {
    margin-bottom: 1rem;
  }
  .modal-header,
  .modal-body,
  .modal-footer {
    border: 0;
    padding: 0;
  }
  .modal-title {
    @include h4;
    font-family: $font-family-metropolis;
    font-weight: bold;
  }

  // Notification Management
  &#notificationManagementModal .modal-body{
    display: flex;
    flex-direction: column;
  }

  @include media-breakpoint-down(sm) {

    // Notification Management
    &#notificationManagementModal {
      padding: 0 !important;

      .modal-dialog {
        max-width: 100%;
        min-height: 0;
        margin: 0;
        height: 100%;
        display: block;
      }
      .modal-dialog .modal-inside {
        width: 100%;
        height: 100%;
      }
      .modal-content {
        border-radius: 0;
        max-height: 100%;
        height: 100%;
      }
      .modal-close-button {
        right: 1rem;
        top: 1rem;
      }
    }
  }
}

// Toast
.toast {
  top: $navbar-height;
  position: absolute;
  left: 0;
  right: 0;
  max-width: 100%;
  margin: 10px auto 0;
  z-index: 1;
  background: transparent;
  border: 0;
  box-shadow: none;
  padding: 0;
  text-align: center;
  font-family: $font-family-metropolis;
  font-weight: bold;
  @include h6;

  .toast-body {
    display: inline-block;
    background: #FFFFFF;
    border-radius: 50px;
    padding: 0.75rem 1.5rem;
  }
}

